<resources>
    <string name="app_name">One Day Wiser</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_parent_main">ParentMainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_messages">My Messages</string>
    <string name="create_new_message">Create New Message</string>
    <string name="lessons">Lessons</string>
    <string name="group_leaderboard">Group Leader Board</string>
    <string name="trophies">Trophies</string>
    <string name="aquarium">Aquarium</string>
    <string name="aquatics_shop">Aquatics Shop</string>

</resources>
